--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
+    "@types/validator": "^13.11.1",
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
@@ -34,7 +35,7 @@
     "@types/jest": "^27.0.2",
     "@types/keyv": "^3.1.3",
     "@types/node": "^14.17.27",
-    "@types/sharp": "^0.30.0",
+    "@types/sharp": "^0.30.5",
     "@types/supertest": "^2.0.11",
     "aws-sdk": "^2.1009.0",
     "eslint-plugin-no-only-tests": "^2.6.0",
