--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   },
   "scripts": {
     "build:test": "tsc --noEmit",
+    "install": "pnpm run build",
     "build": "tsc --build tsconfig.build.json",
     "prebuild": "yarn clean",
     "clean": "rimraf dist",
