--- a/package.json
+++ b/package.json
@@ -15,18 +15,7 @@
     "keyv": "^4.0.3",
     "reflect-metadata": "^0.1.13",
     "sharp": "^0.30.0",
-    "tsyringe": "^4.6.0"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^17.0.0",
-    "@commitlint/config-conventional": "^17.0.0",
-    "@heise/eslint-config": "^19.0.13",
-    "@keyv/redis": "^2.1.3",
-    "@semantic-release/changelog": "^6.0.0",
-    "@semantic-release/commit-analyzer": "^9.0.1",
-    "@semantic-release/git": "^10.0.0",
-    "@semantic-release/npm": "^9.0.0",
-    "@semantic-release/release-notes-generator": "^10.0.2",
+    "tsyringe": "^4.6.0",
     "@types/cache-manager": "^4.0.0",
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
@@ -38,6 +27,18 @@
     "@types/node": "^14.17.27",
     "@types/sharp": "^0.30.5",
     "@types/supertest": "^2.0.11",
+    "typescript": "^4.4.4"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.0.0",
+    "@commitlint/config-conventional": "^17.0.0",
+    "@heise/eslint-config": "^19.0.13",
+    "@keyv/redis": "^2.1.3",
+    "@semantic-release/changelog": "^6.0.0",
+    "@semantic-release/commit-analyzer": "^9.0.1",
+    "@semantic-release/git": "^10.0.0",
+    "@semantic-release/npm": "^9.0.0",
+    "@semantic-release/release-notes-generator": "^10.0.2",
     "aws-sdk": "^2.1009.0",
     "eslint-plugin-no-only-tests": "^2.6.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
@@ -53,8 +54,7 @@
     "semantic-release": "^19.0.0",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
-    "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
+    "ts-node": "^10.3.0"
   },
   "peerDependencies": {
     "aws-sdk": "^2.713.0",
