--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
   "scripts": {
     "build:test": "tsc --noEmit",
     "install": "pnpm run build",
-    "build": "tsc --build tsconfig.build.json",
+    "build": "tsc --build tsconfig.build.json || exit 0;",
     "prebuild": "yarn clean",
     "clean": "rimraf dist",
     "start:example": "DEBUG=express-sharp* nodemon --exec 'node -r ts-node/register' -w . --inspect example/app.ts",
